Fixed infinite looping in jquery-linenum when textarea is not visible. Almost implemented snipped editing UI.

--- a/equares_http/public/stylesheets/scheme-editor.css
+++ b/equares_http/public/stylesheets/scheme-editor.css
@@ -234,6 +234,7 @@ Using workaround with bbox instead.
     height: 16px;
     margin-left: 2px;
     margin-right: 2px;
+    cursor: pointer;
 }
 
 #scheme-box-extras-text {
